wip... battle stuff

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -174,8 +174,23 @@
     <Compile Include="Battle\Menu\IGMData\Limit\Renzokeken.cs" />
     <Compile Include="Battle\Menu\IGMData\Target\Party.cs" />
     <Compile Include="Battle\Menu\IGMData\Target\Random.cs" />
+    <Compile Include="Battle\Stage\Camera\BattleCameraCollection.cs" />
+    <Compile Include="Battle\Stage\Camera\BattleCameraSet.cs" />
+    <Compile Include="Battle\Stage\Camera\BattleCameraSettings.cs" />
+    <Compile Include="Battle\Stage\Camera\Camera.cs" />
+    <Compile Include="Battle\Stage\Camera\CameraSetAnimGRP.cs" />
+    <Compile Include="Battle\Stage\Camera\CameraStruct.cs" />
+    <Compile Include="Battle\Stage\MainGeometrySection.cs" />
+    <Compile Include="Battle\Stage\Model.cs" />
+    <Compile Include="Battle\Stage\ModelGroup.cs" />
     <Compile Include="Battle\RegularPyramid.cs" />
     <Compile Include="AV\Buffer_Data.cs" />
+    <Compile Include="Battle\Stage\ObjectsGroup.cs" />
+    <Compile Include="Battle\Stage\Quad.cs" />
+    <Compile Include="Battle\Stage\Stage.cs" />
+    <Compile Include="Battle\Stage\Stage_GeometryInfoSupplier.cs" />
+    <Compile Include="Battle\Stage\Triangle.cs" />
+    <Compile Include="Battle\Stage\Vertex.cs" />
     <Compile Include="Card_Game\Card_Game.cs" />
     <Compile Include="Card_Game\EXE_Offsets.cs" />
     <Compile Include="Card_Game\Faces.cs" />
