camera and stage seem to be a a better place.
goal was to group up the stage values and camera values into their own classes. Debug module was very cluttered and it was hard to find anything. And everything seems to be working.
I also wanted camera to not be stuck in the stage so module had control over it. So I just pass the endoffset from camera into stage. Though one issue with this approch is the archive file is opened multiple times. I'll probably move the open method to module. Though when camera changes animations it re opens to read the next one instead of storing all of them in an array.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -147,9 +147,14 @@
     <Compile Include="AV\Movie\STATE.cs" />
     <Compile Include="AV\Video.cs" />
     <Compile Include="Battle\BattleSwirl.cs" />
+    <Compile Include="Battle\Coordinate.cs" />
     <Compile Include="Battle\DeadTime.cs" />
     <Compile Include="Battle\debug_battleDat.cs" />
+    <Compile Include="Battle\Encounter.cs" />
+    <Compile Include="Battle\EncounterFlag.cs" />
+    <Compile Include="Battle\Encounters.cs" />
     <Compile Include="Battle\Enemy.cs" />
+    <Compile Include="Battle\EnemyCoordinates.cs" />
     <Compile Include="Battle\FPS_Camera.cs" />
     <Compile Include="Battle\IEnemy.cs" />
     <Compile Include="Battle\Information.cs" />
@@ -174,12 +179,12 @@
     <Compile Include="Battle\Menu\IGMData\Limit\Renzokeken.cs" />
     <Compile Include="Battle\Menu\IGMData\Target\Party.cs" />
     <Compile Include="Battle\Menu\IGMData\Target\Random.cs" />
-    <Compile Include="Battle\Stage\Camera\BattleCameraCollection.cs" />
-    <Compile Include="Battle\Stage\Camera\BattleCameraSet.cs" />
-    <Compile Include="Battle\Stage\Camera\BattleCameraSettings.cs" />
-    <Compile Include="Battle\Stage\Camera\Camera.cs" />
-    <Compile Include="Battle\Stage\Camera\CameraSetAnimGRP.cs" />
-    <Compile Include="Battle\Stage\Camera\CameraStruct.cs" />
+    <Compile Include="Battle\Camera\BattleCameraCollection.cs" />
+    <Compile Include="Battle\Camera\BattleCameraSet.cs" />
+    <Compile Include="Battle\Camera\BattleCameraSettings.cs" />
+    <Compile Include="Battle\Camera\Camera.cs" />
+    <Compile Include="Battle\Camera\CameraSetAnimGRP.cs" />
+    <Compile Include="Battle\Camera\CameraStruct.cs" />
     <Compile Include="Battle\Stage\GeometryInfoSupplier.cs" />
     <Compile Include="Battle\Stage\GeometryVertexPosition.cs" />
     <Compile Include="Battle\Stage\MainGeometrySection.cs" />
