INF updated broke up classes into own files.
All the INF file is being read. Unsure if it's 100% correct order for everything. When we get to using these we can fix it.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -202,7 +202,11 @@
     <Compile Include="Card_Game\Faces.cs" />
     <Compile Include="CountDown.cs" />
     <Compile Include="Field\Camera\Cameras.cs" />
+    <Compile Include="Field\INF\Gateway.cs" />
+    <Compile Include="Field\INF\Gateways.cs" />
     <Compile Include="Field\INF\INF.cs" />
+    <Compile Include="Field\INF\Trigger.cs" />
+    <Compile Include="Field\INF\Triggers.cs" />
     <Compile Include="Field\Menu\FieldMenu.cs" />
     <Compile Include="Field\WalkMesh\Access.cs" />
     <Compile Include="Field\Background\Background.cs" />
