Moved code common to Quad and Triangle to a Polygon abstract class.
I was adding methods and had to always add to both.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Battle\RegularPyramid.cs" />
     <Compile Include="AV\Buffer_Data.cs" />
     <Compile Include="Battle\Stage\ObjectsGroup.cs" />
+    <Compile Include="Battle\Stage\Polygon.cs" />
     <Compile Include="Battle\Stage\Quad.cs" />
     <Compile Include="Battle\Stage\Stage.cs" />
     <Compile Include="Battle\Stage\Triangle.cs" />
