moved some files into folders for enemies and characters.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -148,20 +148,20 @@
     <Compile Include="AV\Video.cs" />
     <Compile Include="Battle\AnimationSystem.cs" />
     <Compile Include="Battle\BattleSwirl.cs" />
-    <Compile Include="Battle\CharacterData.cs" />
-    <Compile Include="Battle\CharacterInstanceInformation.cs" />
+    <Compile Include="Battle\Characters\CharacterData.cs" />
+    <Compile Include="Battle\Characters\CharacterInstanceInformation.cs" />
     <Compile Include="Battle\Encounters\Coordinate.cs" />
     <Compile Include="Battle\DeadTime.cs" />
     <Compile Include="Battle\debug_battleDat.cs" />
     <Compile Include="Battle\Encounters\Encounter.cs" />
     <Compile Include="Battle\Encounters\EncounterFlag.cs" />
     <Compile Include="Battle\Encounters\Encounters.cs" />
-    <Compile Include="Battle\Enemy.cs" />
+    <Compile Include="Battle\Enemies\Enemy.cs" />
     <Compile Include="Battle\Encounters\EnemyCoordinates.cs" />
-    <Compile Include="Battle\EnemyInstanceInformation.cs" />
+    <Compile Include="Battle\Enemies\EnemyInstanceInformation.cs" />
     <Compile Include="Battle\FPS_Camera.cs" />
-    <Compile Include="Battle\IEnemy.cs" />
-    <Compile Include="Battle\Information.cs" />
+    <Compile Include="Battle\Enemies\IEnemy.cs" />
+    <Compile Include="Battle\Enemies\Information.cs" />
     <Compile Include="Battle\init_debugger_battle.cs" />
     <Compile Include="Battle\Mag.cs" />
     <Compile Include="Battle\Menu\BattleMenu.cs" />
