fix added LZ4 compression library for remaster.

--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FFmpeg.AutoGen" version="4.2.0" targetFramework="net46" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net46" />
   <package id="MonoGame.Framework.DesktopGL" version="3.7.1.189" targetFramework="net46" />
   <package id="MonoGame.Framework.Portable" version="3.7.1.189" targetFramework="net46" />
   <package id="NAudio" version="1.9.0" targetFramework="net46" />
   <package id="NAudio.Vorbis" version="1.0.0.0" targetFramework="net46" />
   <package id="NVorbis" version="0.8.6" targetFramework="net46" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net46" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" />
 </packages>
