--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -176,8 +176,10 @@
     <Compile Include="Battle\FPS_Camera.cs" />
     <Compile Include="Battle\Enemies\IEnemy.cs" />
     <Compile Include="Battle\Enemies\Information.cs" />
+    <Compile Include="BinaryReaderExt.cs" />
+    <Compile Include="Battle\Mag\Geometry.cs" />
     <Compile Include="Battle\init_debugger_battle.cs" />
-    <Compile Include="Battle\Mag.cs" />
+    <Compile Include="Battle\Mag\Mag.cs" />
     <Compile Include="Battle\Menu\BattleMenu.cs" />
     <Compile Include="Battle\Menu\BattleMenus.cs" />
     <Compile Include="Battle\Menu\IGMDataItem\Gradient\ATB.cs" />
