fixed cache in ArchiveZZZ
file stays in ram and keeps a timestamp of last access. so it'll dump the oldest when we get over 10 files in ram.

Also added stream width range values as an alternate way to read files out of the zzz archives.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -153,8 +153,10 @@
     <Compile Include="Archive\FI.cs" />
     <Compile Include="Archive\FL.cs" />
     <Compile Include="Archive\ZZZ\ArchiveZZZ.cs" />
+    <Compile Include="Archive\BufferWithAge.cs" />
     <Compile Include="Archive\ZZZ\FileData.cs" />
     <Compile Include="Archive\ZZZ\Header.cs" />
+    <Compile Include="Archive\StreamWithRangeValues.cs" />
     <Compile Include="AV\Audio.cs" />
     <Compile Include="AV\Movie\Directories.cs" />
     <Compile Include="AV\Movie\Files.cs" />
