wip on encounter dump

--- a/Dat Dump/Dat Dump.csproj
+++ b/Dat Dump/Dat Dump.csproj
@@ -84,6 +84,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DumpEncounterInfo.cs" />
+    <Compile Include="DumpMonsterAndCharacterDat.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
