--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -314,6 +314,8 @@
     <Compile Include="Field\JSM\Instructions\Abstract\ANIMELOOP.cs" />
     <Compile Include="Field\JSM\Instructions\Abstract\BGANIME.cs" />
     <Compile Include="Field\JSM\Instructions\Abstract\KEY.cs" />
+    <Compile Include="Field\JSM\Instructions\Abstract\PREQ.cs" />
+    <Compile Include="Field\JSM\Instructions\Abstract\REQ.cs" />
     <Compile Include="Field\JSM\Instructions\Abstract\TURN.cs" />
     <Compile Include="Field\JSM\Instructions\ANGELODISABLE.cs" />
     <Compile Include="Field\JSM\Instructions\HASITEM.cs" />
