game is running

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Battle\FPS_Camera.cs" />
     <Compile Include="Battle\Enemies\IEnemy.cs" />
     <Compile Include="Battle\Enemies\Information.cs" />
+    <Compile Include="Battle\Mag\BinReaderExt.cs" />
     <Compile Include="BinaryReaderExt.cs" />
     <Compile Include="Battle\Mag\Geometry.cs" />
     <Compile Include="Battle\init_debugger_battle.cs" />
