--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Archive\ArchiveMap.cs" />
     <Compile Include="Archive\Archives.cs" />
     <Compile Include="Archive\ArchiveWorker.cs" />
+    <Compile Include="Archive\CompressionType.cs" />
     <Compile Include="Archive\FI.cs" />
     <Compile Include="Archive\FL.cs" />
     <Compile Include="Archive\ZZZ\ArchiveZZZ.cs" />
