--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -364,7 +364,7 @@
     <Compile Include="Kernel\Abilities\Ability.cs" />
     <Compile Include="Kernel\Abilities\AbilityFlags4.cs" />
     <Compile Include="Kernel\Abilities\IAbility.cs" />
-    <Compile Include="Kernel\BlueMagic.cs" />
+    <Compile Include="Kernel\Limit\BlueMagic.cs" />
     <Compile Include="Kernel\Unlocker.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Menu\Debug\Debug_Menu.cs" />
@@ -938,23 +938,23 @@
     <Compile Include="Kernel\Commands\BattleCommand.cs" />
     <Compile Include="Kernel\Items\BattleItemsData.cs" />
     <Compile Include="Kernel\BattleOnlyStatuses.cs" />
-    <Compile Include="Kernel\BlueMagicQuistisLimitBreak.cs" />
-    <Compile Include="Kernel\CharacterAbilityFlags.cs" />
-    <Compile Include="Kernel\CharacterAbilities.cs" />
+    <Compile Include="Kernel\Limit\BlueMagicQuistisLimitBreak.cs" />
+    <Compile Include="Kernel\Abilities\CharacterAbilityFlags.cs" />
+    <Compile Include="Kernel\Abilities\CharacterAbilities.cs" />
     <Compile Include="Kernel\CharacterStats.cs" />
     <Compile Include="Kernel\Commands\CommandAbilities.cs" />
     <Compile Include="Kernel\Commands\CommandAbilityData.cs" />
     <Compile Include="Kernel\KernelBin.cs" />
     <Compile Include="Kernel\Devour.cs" />
-    <Compile Include="Kernel\DuelZellLimitBreak.cs" />
+    <Compile Include="Kernel\Limit\DuelZellLimitBreak.cs" />
     <Compile Include="Kernel\Element.cs" />
     <Compile Include="Kernel\EnemyAttacksData.cs" />
     <Compile Include="Kernel\Abilities\IEquippableAbility.cs" />
     <Compile Include="Kernel\Gender.cs" />
     <Compile Include="Kernel\Abilities\GFAbilities.cs" />
-    <Compile Include="Kernel\JunctionAbilityFlags.cs" />
+    <Compile Include="Kernel\Abilities\JunctionAbilityFlags.cs" />
     <Compile Include="Kernel\JunctionableGFsData.cs" />
-    <Compile Include="Kernel\JunctionAbilities.cs" />
+    <Compile Include="Kernel\Abilities\JunctionAbilities.cs" />
     <Compile Include="Kernel\JunctionStatuses.cs" />
     <Compile Include="Kernel\MagicData.cs" />
     <Compile Include="Kernel\MagicID.cs" />
@@ -962,23 +962,23 @@
     <Compile Include="Kernel\MiscSection.cs" />
     <Compile Include="Kernel\MiscTextPointers.cs" />
     <Compile Include="Kernel\NonBattleItemsData.cs" />
-    <Compile Include="Kernel\Kernel_bin.Non_Junctionable_GFs_Attacks_Data.cs" />
-    <Compile Include="Kernel\Kernel_bin.Party_abilities.cs" />
-    <Compile Include="Kernel\Kernel_bin.Persistant_Statuses.cs" />
-    <Compile Include="Kernel\Kernel_bin.Quanity.cs" />
-    <Compile Include="Kernel\BlueMagicQuistisLimitBreakParameters.cs" />
-    <Compile Include="Kernel\Kernel_bin.Renzokeken_Level.cs" />
-    <Compile Include="Kernel\Kernel_bin.Renzokuken_Finishers_Data.cs" />
-    <Compile Include="Kernel\Kernel_bin.Rinoa_limit_breaks_part_1.cs" />
-    <Compile Include="Kernel\Kernel_bin.Rinoa_limit_breaks_part_2.cs" />
-    <Compile Include="Kernel\Kernel_bin.Selphie_limit_break_sets.cs" />
-    <Compile Include="Kernel\Kernel_bin.Shot_Irvine_limit_break.cs" />
-    <Compile Include="Kernel\Kernel_bin.Slot.cs" />
-    <Compile Include="Kernel\Kernel_bin.Slot_array.cs" />
-    <Compile Include="Kernel\Kernel_bin.Stat.cs" />
-    <Compile Include="Kernel\Kernel_bin.StatFlags.cs" />
-    <Compile Include="Kernel\Kernel_bin.Stat_percent_abilities.cs" />
-    <Compile Include="Kernel\Kernel_bin.Target.cs" />
+    <Compile Include="Kernel\NonJunctionableGFsAttacksData.cs" />
+    <Compile Include="Kernel\PartyAbilities.cs" />
+    <Compile Include="Kernel\PersistentStatuses.cs" />
+    <Compile Include="Kernel\Quantity.cs" />
+    <Compile Include="Kernel\Limit\BlueMagicQuistisLimitBreakParameters.cs" />
+    <Compile Include="Kernel\RenzokukenFinisher.cs" />
+    <Compile Include="Kernel\RenzokukenFinisherData.cs" />
+    <Compile Include="Kernel\RinoaLimitBreaksPart1.cs" />
+    <Compile Include="Kernel\RinoaLimitBreaksPart2.cs" />
+    <Compile Include="Kernel\SelphieLimitBreakSets.cs" />
+    <Compile Include="Kernel\ShotIrvineLimitBreak.cs" />
+    <Compile Include="Kernel\Slot.cs" />
+    <Compile Include="Kernel\SlotArray.cs" />
+    <Compile Include="Kernel\Stat.cs" />
+    <Compile Include="Kernel\StatFlags.cs" />
+    <Compile Include="Kernel\StatPercentageAbilities.cs" />
+    <Compile Include="Kernel\Target.cs" />
     <Compile Include="Kernel\TemporaryCharacterLimitBreaks.cs" />
     <Compile Include="Kernel\WeaponsData.cs" />
     <Compile Include="Kernel\ZellLimitBreakParameters.cs" />
